[package]
name = "rustupolis"
version = "0.0.2"
authors = ["Michael Wagner <wagner.mchl@googlemail.com>"]
edition = "2018"
description = "An implementation of the tuple space data structure in Rust."
repository = "https://github.com/micutio/rustupolis"
readme = "README.md"
# Up to five keywords.
keywords = ["tuple-space", "concurrent", "distributed", "decentralized"]
categories = ["command-line-utilities", "data-structures"]
license = "MIT"

# For documentation of features see the `mio::features` module.
[features]
# By default Mio only provides a shell implementation.
default = []
# Enables the `Poll` and `Registry` types.
os-poll = []
# Enables `mio::net` module containing networking primitives.
net = []

[badges]
travis-ci = { repository = "https://travis-ci.org/Micutio/rustupolis", branch = "master" }

[lib]
name = "rustupolis"
path = "src/lib/lib.rs"
test = true
doctest = true

[[bin]]
name = "rustupolis_cli"
path = "src/bin/cli/cli.rs"
test = true
doctest = true

[dependencies]
# clap = "2.33.1"
error-chain = "0.12.2"
futures = "0.3.5"
indextree-ng = "1.0.5"
log = "0.4.8"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
rand_isaac = "0.2.0"
mio = {version = "0.8", features = ["net","os-poll"]}

[[example]]
name = "hello_world"
path = "examples/hello_world/main.rs"

[[example]]
name = "single_threaded"
path = "examples/single_threaded/main.rs"

[[example]]
name = "multi_threaded"
path = "examples/multi_threaded/main.rs"

[[test]]
name = "tuple"
path = "tests/tuple.rs"

[[test]]
name = "simplestore"
path = "tests/simplestore.rs"

[[test]]
name = "wildcard"
path = "tests/wildcard.rs"

[[test]]
name = "space"
path = "tests/space.rs"
