[package]
name = "rustupolis_server"
version = "0.1.1"
edition = "2021"

# For documentation of features see the `mio::features` module.
[features]
# By default Mio only provides a shell implementation.
default = []
# Enables the `Poll` and `Registry` types.
os-poll = []
# Enables `mio::net` module containing networking primitives.
net = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.8", features = ["net","os-poll"]}
rustupolis = { path = "../rustupolis" }
futures = "0.3"
log = "0.4"
error-chain = "0.12"
crossbeam = "0.8"

[[test]]
name = "test_server"
path = "tests/test_server.rs"